[tool.poetry]
name = "pierre-cau"
version = "0.1.0"
description = "My profile"
authors = ["Pierre CAU <pcaupro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
profile-readme = "^0.1.2"
feedparser = "^6.0.10"
pandas = "^1.4.4"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"